# django-devapp

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/dev/: boot.py
