[metadata]
name = django-devapp
version = 0.1.0
author = George Tantiras
description = Basic tools to manage a django application outside of a Django project.
license = BSD 3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raratiru/django-devapp
project_urls =
    Bug Tracker = https://github.com/raratiru/django-devapp/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    click
    build
    twine
    django

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dev = dev.boot:control
